# ai-hedge-fund

./: pyproject.toml
app/: README.md
app/backend/: README.md
