[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using multiple specialized agents"
authors = ["virattt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langchain-groq = "^0.1.0"
langgraph = "^0.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
yfinance = "^0.2.40"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
requests = "^2.31.0"
pydantic = "^2.7.0"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
hedge-fund = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88  # prefer black's default over the project's 100
target-version = ["py311"]

[tool.ruff]
line-length = 88  # keep consistent with black
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
